--- a/Client/PokerClient.csproj
+++ b/Client/PokerClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{416E7BF8-589C-4625-9D63-3A30286D1745}</ProjectGuid>
+    <ProjectGuid>{51BDCEE3-FDAA-47F1-8FCB-4B5D16D0ECF0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClientServerCommonLibrary</RootNamespace>
-    <AssemblyName>ClientServerCommonLibrary</AssemblyName>
+    <RootNamespace>PokerClient</RootNamespace>
+    <AssemblyName>PokerClient</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,24 +34,31 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="ClientBase.cs" />
-    <Compile Include="Extensii.cs" />
-    <Compile Include="HS.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="NetWorkSetup.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="PlayerStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Table.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClientServerCommonLibrary\ClientServerCommonLibrary.csproj">
+      <Project>{416e7bf8-589c-4625-9d63-3a30286d1745}</Project>
+      <Name>ClientServerCommonLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy ClientServerCommonLibrary.dll "E:\BRTECH\PokerMania\Assets"</PostBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>copy PokerClient.dll "E:\BRTECH\PokerMania\Assets"</PostBuildEvent>
   </PropertyGroup>
 </Project>
